@@ -178,6 +178,15 @@ public class TestDenseMatrix extends TestCase {
         assertEquals(result.get(i, j), m1.get(i, j) + m2.get(i, j));
       }
     }
+
+    Matrix subtract = result.add(-1.0, m2);
+
+    for (int i = 0; i < SIZE; i++) {
+      for (int j = 0; j < SIZE; j++) {
+        double gap = (subtract.get(i, j) - m1.get(i, j));
+        assertTrue(-0.00001 < gap && gap < 0.00001);
+      }
+    }
   }
 
   public void testMultiMatrixAdd() throws IOException {
